<resources>
    <string name="app_name">Kotlin Code</string>
    <string name="search_et_hit">输入查找关键字</string>
    <string name="login_hint">Login</string>
    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="square_name">广场</string>
    <string name="official_name">公众号</string>
    <string name="system_name">体系</string>
    <string name="project_name">项目</string>
    <string name="emo">暂未实现</string>
</resources>